Scrollbar styling fix, langSwitcher font

--- a/src/index.scss
+++ b/src/index.scss
@@ -82,7 +82,7 @@ $header-font;
 }
 
 *::-webkit-scrollbar {
-    width: 1.5rem;
+    width: .85rem;
 }
 
 *::-webkit-scrollbar-track {
@@ -341,16 +341,17 @@ hr {
     top: 0;
     right: 0;
     padding: 1rem;
-    font-weight: 800;
+
     z-index: 999;
     user-select: none;
-
 
     button {
         margin: 0;
         border: 0;
         padding: 0;
         background: rgba(255, 255, 255, 0);
+        font-weight: 400;
+        letter-spacing: 1px;
         color: #fff;
         opacity: 0.65;
 
